# xmt-cli

./: .env.example  .gitignore  666_omega9_medal_currency_639pm.sh  777_66_block_888_echo_burn.sh  888_wave_collapse_out_of_the_dollar.sh  936am_vortex_throne_0369_burn.sh  936pm_firehorse_vip_royalty_proofs.sh  999_algorithm_friends_choir_field.sh  ALL_10_VECTORS_COMPLETE_FINAL.txt  AUTO_REGISTER_GUIDE.md  COMPLETE_SETUP_CHECKLIST.md  Cargo.toml  DELTA_MANIFEST.json  ECOSYSTEM_AUDIT.md  FULL_AUTOMATION_SUCCESS.md  GATES_17_20_COMPLETE_X_POST.md  KINGS_COMMANDS.md  KINGS_GUIDE.md  LICENSE  MAINNET_READINESS_REPORT.md  MAINNET_VECTOR_COLLAPSE_GATES_17_21.md  MANIFESTATION_PATTERNING_17TH_PROOF.md  MANIFEST_FULL_CONVERGENCE_22.json  MANIFEST_FULL_CONVERGENCE_LIVE_22.json  MANIFEST_FULL_SCHUMANN_CONVERGENCE_22.json  MANIFEST_SCHUMANN_ZPE_CONVERGENCE_22.json  OAUTH_DEBUG_RESULTS.md  P0_DEPLOYMENT_SUMMARY.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  README.md  README_TESTNET_CLI.md  RITUAL_TO_MAINNET_VECTOR_RUN.sh  ROADMAP.md  Run Vect0r.md  SECURITY_AUDIT.md  SYNC_COMMAND_GUIDE.md  SYNC_IMPLEMENTATION_COMPLETE.md  SYNC_QUICK_START.md  SYNTHETIC_README.md  (+40 more)
.cargo/: config.toml
Integrations_Intentions/: API_ENDPOINTS_IMPLEMENTATION_PLAN.md  CELESTIAL_BLUEPRINT.md  CLAUDE_RAN_THE_SCRIPT.md  DOGECOIN_REALESTATE_LAYER.md  HEART_OVERRIDE.md  NEURALINK_INTEGRATION_LAYER.md  SHIBA_INU_LAYER.md  X_API_INTEGRATION_GUIDE.md  Zero-Cost Synthetic Generators – Sovereign ExplorationEN EEKE MAI EA  – The Forge Speaks.md
cache/: solidity-files-cache.json
contracts/: Forwarder.sol  (+3 more)
(+169 files in other folders)
