[package]
name = "xmt-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xmt-cli"
path = "src/main.rs"

[[bin]]
name = "validate_env"
path = "scripts/validate_env.rs"

[[bin]]
name = "check_minter_role"
path = "scripts/check_minter_role.rs"

[[bin]]
name = "transfer_ownership"
path = "scripts/transfer_ownership.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ethers = "2.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
hex = "0.4"
colored = "2.1"
candle-core = "0.9.2"
candle-transformers = "0.9.2"
chrono = { version = "0.4.44", features = ["serde"] }
